# templar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargofmt.yml  rust.yml
crates/lua-export/: Cargo.toml
crates/lua-export/src/: lib.rs
crates/lua-export/tests/: macro.lua  macro.rs
crates/templar/: Cargo.toml
crates/templar/examples/config/: config.lua  example.lua  main.rs  templar.lua
crates/templar/src/: commands.rs  fs.rs  lib.rs  main.rs  opt.rs  paths.rs
crates/templar/src/conductor/: config.rs  engine.rs  mod.rs
crates/templar/src/conductor/trebuchet/: directives.rs  mod.rs  parser.rs  template.rs
crates/templar/src/config/: api.rs  config.rs  mod.rs  rawconfig.rs  rawrule.rs  rule.rs
crates/templar/src/engine/: directives.rs  mod.rs  parser.rs  template.rs
crates/templar/src/template/: mod.rs
crates/templar/src/templating/: directive.rs  directives.rs  mod.rs  parser.rs  template.rs
crates/templar/src/utils/: mod.rs
examples/config/: config.lua  main.rs  templar.lua
src/: main.rs  template_parser.rs
src/config/: api.rs  config.rs  mod.rs
src/templating/: directive.rs  mod.rs  parser.rs  processor.rs  template.rs
