[package]
name = "templar"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
lazy_static = "1.4.0"
indoc = "1.0.3"
tempdir = "0.3.7"

[dependencies]
lua-export = { path = "../lua-export" }
anyhow = "1.0.*"
glob = "0.3.*"
nom = "7.1.*"
rlua = "0.19.*"
structopt = "0.3.*"
dyn-clone = "1.0.*"
vfs = "0.6.2"
once_cell = "1.10.*"
